# remsfal-ocr

./: .env.example.azure  .env.example.local  .gitignore  README.md  TEST_COVERAGE_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests_with_coverage.sh  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: cd-build.yml  ci-build.yml  codeql-analysis.yml  deploy-to-acr.sh  sonar-analysis.yml
docker/: Dockerfile
remsfal_ocr/: kafka_consumer.py  main.py  ocr_engine.py  s3_client.py  test.py
scripts/: test_ocr.py
src/: download_models.py  kafka_consumer.py  kafka_models.py  main.py  ocr_engine.py  s3_client.py
src/core/kafka/: client.py  clients.py
src/core/storage/: base.py  client.py
src/core/vault/: base.py  client.py
src/storage/minio/: client.py
src/storage/storageaccount/: client.py
src/vault/keyvault/: client.py
src/vault/local/: client.py
test/: dummy_test.py  test_kafka_client.py  test_kafka_consumer.py  test_kafka_models.py  test_ocr_engine.py  test_ocr_integration.py  test_s3_client.py  test_storage_client.py  test_vault_client.py
